# ChangeLog of Nadoka($Rev$)
# $Id$ 

2005-06-08(Wed) 07:56:17 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/config.rb : clear if channel setting is not hash


2005-06-08(Wed) 07:42:17 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/googlebot.nb : fix to use count default language


2005-06-08(Wed) 06:21:25 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/server.rb : trap IOError and change error output

	* ndk/config.rb : support {prefix:(nick|user|host)} specifier

	* ndk/logger.rb : {user} -> {nick}

	* nadokarc : apply above changes

	* rice/irc.rb : output unless port is closed

	* plugins/backlogbot.nb : change spell (@store -> @stores)


2005-06-05(Sun) 22:47:15 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/server.rb : PONG MISS message dlog -> slog


2005-05-31(Tue) 14:08:26 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : change log setting of "#nadoka_check"


2005-05-29(Sun) 14:01:02 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/server.rb, ndk/server_state.rb, ndk/logger.rb :
	NICK and QUIT logging from server_state

	* nadokarc, ndk/config.rb : change default PART, QUIT message format


2005-05-29(Sun) 12:53:48 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/weba.nb : set default password on

	* ndk/logger.rb : fix nick logging


2005-05-29(Sun) 07:06:55 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/weba.nb : use logger's message store

	* ndk/logger.rb, ndk/config.rb : some changes for weba

	* nadokarc : add vim pragma and FilenameEncoding setting

	* ndk/client.rb, ndk/server.rb : fix logger relaod process

	* ndk/server_state.rb : add channel_raw_names


2005-05-29(Sun) 03:35:28 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : add BackLogBot as default bot


2005-05-29(Sun) 03:31:07 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/server.rb : add @rc read accessor

	* nadokarc, ndk/config.rb : support default setting_name
	as rc file name


2005-05-29(Sun) 03:04:53 +0900  Koichi Sasada  <ko1@atdot.net>
